@@ -1,5 +1,9 @@
 2010-08-31  Mark Grondona <mgrondona@llnl.gov>
 
+	* src/modules/genders.c :
+	  Allow alternate genders file to be specified with the env
+	  var PDSH_GENDERS_FILE.
+
 	* src/common/hostlist.c :
 	  Update to latest hostlist.c from LSD-Tools project with fix for 
 	  multiple brackets in hostlists from sf.net user don-fanucci.
